# runtime_mps2

./: CMakeLists.txt  CMakePresets.json  README.md
app/: hello.c  io_echo.c
cmake/: install-rules.cmake
inc/platform/: platform.h  uart.h
src/: CMSDK_CM4.h  cmsis_gcc.h  cmsis_nvic.h  cmsis_version.h  core_cm4.h  handlers.c  init.c  lib.h  memory_zones.h  mps2.src.ld  mpu_armv7.h  startup.S  uart.c  uart.h
toolchains/: gcc-armv7_m-unknown-none-eabi.toolchain  gcc-armv7e_m-unknown-none-eabi.toolchain
